feat: add other dummy endpoints
